js/js.translator/testData/incremental/invalidation/constValChangeThroughDependency/lib2/l2.kt
package bridge

import sample.answer

fun expose(): Int = answer
